# quantum-portfolio

./: .env.example  .gitignore  AUDIT_2026-05-27.md  LICENSE  README.md  SECURITY.md  SUBMISSION.md  app.py  make_chart.py  requirements.txt  run_backtest.py  run_demo.py  run_hardware.py  run_pq_demo.py
.github/workflows/: test.yml
.streamlit/: config.toml
contracts/: foundry.toml
contracts/script/: Deploy.s.sol  DeployDex.s.sol  DeployMorphoSupplyAdapter.s.sol  DeployUniswapRoutingVault.s.sol  DeployVault.s.sol
contracts/src/: AuditAnchor.sol  MonadAllocationVault.sol  MorphoSupplyAdapter.sol  RoutingVault.sol  UniswapRoutingVault.sol
contracts/test/: AuditAnchor.t.sol  (+5 more)
docs/: DEMO_VIDEO_SCRIPT.md  PANEL_ANSWERS.md  PITCH_DECK.html  PITCH_DECK.md  STAGE2_APPLICATION.md
outputs/: audit_log.jsonl  backtest.json  hardware_run.json  hardware_run_defi.json  signed_orders.json  unsigned_alloc_tx.json  unsigned_anchor_tx.json  unsigned_monad_tx.json
scripts/: build_demo_video.py  take_screenshots.py
src/: ai_forecast.py  backtest.py  data.py  defi_data.py  hardware.py  monad_tx.py  orders.py  pq_signing.py  problem.py  qaoa_hw.py  solvers.py  xy_qaoa.py
tests/: test_monad_tx.py  test_pq_signing.py
zk-mldsa/: .gitignore  Cargo.toml  README.md  mldsa_input.json  provision.sh
zk-mldsa/contracts/lib/sp1-contracts/contracts/src/: ISP1Verifier.sol
zk-mldsa/contracts/src/: MLDSAAttestation.sol
zk-mldsa/contracts/src/fixtures/: groth16-mldsa-fixture.json
zk-mldsa/lib/: Cargo.toml
zk-mldsa/lib/src/: lib.rs
zk-mldsa/program/src/: main.rs
(+7 files in other folders)
